--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "markdown-to-json": "^0.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.1.1",
+    "react-katex": "^2.0.2",
+    "react-markdown": "^7.1.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-syntax-highlighter": "^15.4.5",
+    "rehype-katex": "^6.0.2",
+    "remark-math": "^5.1.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
