--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.0",
     "react-syntax-highlighter": "^15.4.5",
     "rehype-katex": "^6.0.2",
+    "rehype-raw": "^6.1.1",
     "remark-math": "^5.1.1",
     "web-vitals": "^2.1.2"
   },
